tests/errors/cannot_assign.n
fn main() {
    int x = "hello";
}
